<b><u> v2.29, 17.02.2017</b></u>
<font color=#FF8C00>&#9830;</font> Add own combat state indicator.
<font color=#FF8C00>&#9830;</font> Hide some blizzard errors by default. To add or remove an error you have to look at the core/filter/errorFilter.lua file.
<font color=#FF8C00>&#9830;</font> Overhaul the profile creation messages. Now it is in the Install frame and will not spam the chat anymore. Credits: Benik
<font color=#FF8C00>&#9830;</font> Profiles for KuiNamePlates, SorhaQuestLog, Details.
<font color=#FF8C00>&#9830;</font> Added button options to re apply addon profiles seperately. Also moved the default tables from ElvUI addons, inside their profile function.
<font color=#FF8C00>&#9830;</font> Add some MessageGroups to the chat install.
<font color=#FF8C00>&#9830;</font> Added Discord link button to the information.

<b><u> v2.28, 05.02.2017</b></u>
<font color=#FF8C00>&#9830;</font> Add new Tag [name:abbrev], will shorten long names.
<font color=#FF8C00>&#9830;</font> Add Tome of Town Portal to LocationPanel.
<font color=#FF8C00>&#9830;</font> Add an own RaidMarkBar (Credits S&L).
<font color=#FF8C00>&#9830;</font> Delete ReadycheckIcon since BenikUI has it.
<font color=#FF8C00>&#9830;</font> Add my own font file to adjust fonts.
<font color=#FF8C00>&#9830;</font> Reposition the AlwaysUpFrame.
<font color=#FF8C00>&#9830;</font> Cleanup the install file. Make an own file for each Addon.

<b><u> v2.27, 02.01.2017</b></u>
<font color=#FF8C00>&#9830;</font> Add skin for XIV_Databar.
<font color=#FF8C00>&#9830;</font> Minor UI improvements.
<font color=#FF8C00>&#9830;</font> Update BigWigs skin.
<font color=#FF8C00>&#9830;</font> CleanUP: Removed: FriendAlert, MiniMapPing.
<font color=#FF8C00>&#9830;</font> Create an own ThreatBar on my Datatext Panel.
<font color=#FF8C00>&#9830;</font> New Year, new logo! :)

<b><u> v2.26, 19.12.2016</b></u>
<font color=#FF8C00>&#9830;</font> Minor Layout adjustments. Recommended AddOn: XIV_Databar.